[tool.poetry]
name = "fixme"
version = "0.2.7"
description = "fixme_repo_description"
authors = ["fixme_user_name <fixme_user_email>"]
license = "MIT"

homepage = "fixme_repo_url"
readme = "README.md"

keywords = [
  "beet",
  "bolt",
  "minecraft",
  "minecraft-commands",
  "mcfunction",
]

include = ["fixme/py.typed"]

[tool.poetry.dependencies]
python = "^3.10"
beet = "^0.76.1"
mecha = "^0.56.0"
bolt = "^0.19.1"
lectern = "^0.24.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
black = "^22.8.0"
isort = "^5.10.1"
pytest-insta = "^0.1.11"
lectern = "^0.24.0"
python-semantic-release = "^7.31.4"

[tool.pytest.ini_options]
addopts = "tests --import-mode=importlib"

[tool.pyright]
typeCheckingMode = "strict"

[tool.black]
target-version = ["py310"]

[tool.isort]
profile = "black"

[tool.semantic_release]
branch = "main"
version_variable = "fixme/__init__.py:__version__"
version_toml = "pyproject.toml:tool.poetry.version"
major_on_zero = false
upload_to_repository = false
build_command = "poetry build"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
